--- a/style.css
+++ b/style.css
@@ -25,6 +25,15 @@ main h2 {
 }
 
 /* Add Student Styles Below */
+.my-style {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    background-color: rgb(27, 27, 27);
+    padding: 3px 0 3px 0;
+    margin-top: 20px;
+}
+
 .jane-style {
     color: hotpink;
     background-color: rgb(19, 19, 19);
